Fixed content margins, card gap, and banner size

--- a/Assignment1/style.css
+++ b/Assignment1/style.css
@@ -16,7 +16,7 @@ body {
 
 .nav, .banner, .card-container {
     display: flex;
-    width: 100%;;
+    width: 100%;
 }
 
 .nav {
@@ -43,6 +43,7 @@ body {
 
 .banner {
     background-image: url("./background.jpg");
+    background-size: cover;
     height: 200px;
     font-size: 2em;
     font-weight: bold;
@@ -53,14 +54,19 @@ body {
     margin-bottom: 0.8em;
 }
 
+.main {
+    margin-bottom: 1em;
+}
+
 .card-container {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
+    gap: 0.8em;
 }
 
 .card {
-    width: calc(50% - 0.8em);
+    width: calc(50% - 1.6em);
     text-align: center;
 
 }
@@ -146,7 +152,7 @@ footer {
     font-size: 1em;
     padding: 0.5em 2em 0.5em 2em;
     text-align: center;
-    margin-top: 0.8em;
+    margin-top: 1.8em;
 }
 
 footer a {
